--- a/iris-engine/requirements.txt
+++ b/iris-engine/requirements.txt
@@ -6,3 +6,5 @@ fastapi>=0.100,<0.110
 uvicorn[standard]>=0.24
 python-multipart>=0.0.6
 asyncpg>=0.29
+redis[hiredis]>=5.0,<6
+cryptography>=42.0,<44
