--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - ./iris-engine/src:/app/src:ro
       - ./iris-engine/tests:/app/tests:ro
+      - ./iris-engine/scripts:/app/scripts:ro
       - ./iris-engine/pyproject.toml:/app/pyproject.toml:ro
       - ./data:/data:ro
     command: >
@@ -15,4 +16,3 @@ services:
       EYED_LOG_LEVEL: debug
       EYED_DB_URL: postgresql://eyed:eyed_dev@postgres:5432/eyed
       EYED_REDIS_URL: redis://redis:6379/0
-      EYED_ENCRYPTION_KEY: ""   # generate: python3 -c "import os; print(os.urandom(32).hex())"
