--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   json_annotation: ^4.9.0
   collection: ^1.19.1
   uuid: ^4.5.1
+  file_picker: ^8.1.6
 
 dev_dependencies:
   flutter_test:
