--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     environment:
-      POSTGRES_DB: eyed
-      POSTGRES_USER: eyed
-      POSTGRES_PASSWORD: eyed_dev
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "9506:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U eyed -d eyed"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 3s
       retries: 5
@@ -55,7 +55,7 @@ services:
     environment:
       EYED_RUNTIME: cpu
       EYED_NATS_URL: nats://nats:4222
-      EYED_DB_URL: postgresql://eyed:eyed_dev@postgres:5432/eyed
+      EYED_DB_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       EYED_REDIS_URL: redis://redis:6379/0
       EYED_HE_ENABLED: "false"  # Set to "true" to enable HE (requires key-service)
       EYED_HE_KEY_DIR: /keys    # Shared volume with key-service
