--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,17 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     secrets:
+      - db_user
+      - db_name
       - db_password
     environment:
-      POSTGRES_DB: eyed
-      POSTGRES_USER: eyed
+      POSTGRES_USER_FILE: /run/secrets/db_user
+      POSTGRES_DB_FILE: /run/secrets/db_name
       POSTGRES_PASSWORD_FILE: /run/secrets/db_password
     ports:
       - "9506:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U eyed -d eyed"]
+      test: ["CMD-SHELL", "pg_isready -U $(cat /run/secrets/db_user) -d $(cat /run/secrets/db_name)"]
       interval: 5s
       timeout: 3s
       retries: 5
@@ -52,6 +54,8 @@ services:
       redis:
         condition: service_healthy
     secrets:
+      - db_user
+      - db_name
       - db_password
     volumes:
       - ./data:/data:ro
@@ -59,8 +63,10 @@ services:
     environment:
       EYED_RUNTIME: cpu
       EYED_NATS_URL: nats://nats:4222
+      EYED_DB_USER_FILE: /run/secrets/db_user
+      EYED_DB_NAME_FILE: /run/secrets/db_name
       EYED_DB_PASSWORD_FILE: /run/secrets/db_password
-      EYED_DB_URL: postgresql://eyed:__DB_PASSWORD__@postgres:5432/eyed
+      EYED_DB_URL: postgresql://__DB_USER__:__DB_PASSWORD__@postgres:5432/__DB_NAME__
       EYED_REDIS_URL: redis://redis:6379/0
       EYED_HE_ENABLED: "false"  # Set to "true" to enable HE (requires key-service)
       EYED_HE_KEY_DIR: /keys    # Shared volume with key-service
@@ -160,6 +166,10 @@ services:
       - -timeout=120s
 
 secrets:
+  db_user:
+    file: ./secrets/db_user.txt
+  db_name:
+    file: ./secrets/db_name.txt
   db_password:
     file: ./secrets/db_password.txt
 
